changed image loading placeholder animation

--- a/src/assets/css/lazyload.scss
+++ b/src/assets/css/lazyload.scss
@@ -18,7 +18,9 @@ img.vp-lazyloaded {
 }
 
 .vp-portfolio__item-img::before,
-.vp-portfolio__thumbnail-img::before {
+.vp-portfolio__thumbnail-img::before,
+.vp-portfolio__item-img::after,
+.vp-portfolio__thumbnail-img::after {
     content: "";
     position: absolute;
     top: 0;
@@ -27,30 +29,37 @@ img.vp-lazyloaded {
     left: 0;
     visibility: visible;
     background: var(--vp-lazyload-images__background);
-    background-color: var(--vp-lazyload-images__background-color);
-    background-position: 0% 50%;
-    background-size: 500% 100%;
     opacity: 1;
     transition: var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) opacity, var(--vp-lazyload-transition-duration) var(--vp-lazyload-transition-duration) visibility;
 }
 
 .vp-portfolio__item-img-lazyloading::before,
-.vp-portfolio__thumbnail-img-lazyloading::before {
+.vp-portfolio__thumbnail-img-lazyloading::before,
+.vp-portfolio__item-img-lazyloading::after,
+.vp-portfolio__thumbnail-img-lazyloading::after {
     animation: vp-lazyload-placeholder var(--vp-lazyload-images__animation-duration) linear infinite;
 }
 
+.vp-portfolio__item-img::before,
+.vp-portfolio__thumbnail-img::before {
+    background: var(--vp-lazyload-images__background-second);
+    animation-delay: var(--vp-lazyload-images__animation-second-delay);
+}
+
 .vp-portfolio__item-img-lazyloaded::before,
-.vp-portfolio__thumbnail-img-lazyloaded::before {
+.vp-portfolio__thumbnail-img-lazyloaded::before,
+.vp-portfolio__item-img-lazyloaded::after,
+.vp-portfolio__thumbnail-img-lazyloaded::after {
     visibility: visible;
     opacity: 0;
 }
 
 @keyframes vp-lazyload-placeholder {
     0%,
-    80% {
-        background-position: 100% 50%;
-    }
     100% {
-        background-position: 0% 50%;
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
     }
 }
