--- a/src/assets/css/_variables-lazyload.scss
+++ b/src/assets/css/_variables-lazyload.scss
@@ -4,9 +4,10 @@
 
 :root {
     // Lazy.
-    --vp-lazyload-images__background: linear-gradient(-70deg, rgba(140, 140, 140, 0) 42%, rgba(140, 140, 140, .05) 50%, rgba(140, 140, 140, 0) 58%);
-    --vp-lazyload-images__background-color: rgba(140, 140, 140, .05);
-    --vp-lazyload-images__animation-duration: 3s;
+    --vp-lazyload-images__background: linear-gradient(270deg, rgba(140, 140, 140, .15), rgba(140, 140, 140, .05));
+    --vp-lazyload-images__background-second: linear-gradient(90deg, rgba(140, 140, 140, .15), rgba(140, 140, 140, .05));
+    --vp-lazyload-images__animation-duration: 1.5s;
+    --vp-lazyload-images__animation-second-delay: .3s;
 
     // Transitions.
     --vp-lazyload-transition-duration: .3s;
