changed Go Pro link color to green

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -13,7 +13,7 @@
 .wp-list-table.plugins a[href*="page=visual_portfolio_go_pro"],
 .vpf-admin-toolbar a[href*="page=visual_portfolio_go_pro"] {
     font-weight: 700;
-    color: #ff6a38;
+    color: #11b916;
 
     .dashicons {
         transition: none;
@@ -21,7 +21,7 @@
 
     &:hover,
     &:focus {
-        color: #f59372;
+        color: #22e429;
     }
 }
 
