--- a/src/gutenberg/components/color-picker/style.scss
+++ b/src/gutenberg/components/color-picker/style.scss
@@ -12,6 +12,10 @@
         .components-color-palette__item-wrapper {
             margin: 0;
         }
+
+        .components-base-control__label {
+            margin-bottom: 0;
+        }
     }
 
     .components-circular-option-picker__option {
