--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -822,6 +822,9 @@ $escaped-svg-characters: (
     @return $string;
 }
 
+.portfolio_page_visual-portfolio-welcome {
+    background-color: #fff;
+}
 .vpf-welcome-screen {
     box-sizing: border-box;
     padding-right: 20px;
@@ -847,9 +850,9 @@ $escaped-svg-characters: (
 
     h2 {
         margin-top: 0;
-        font-size: 1.8em;
+        font-size: 2em;
         font-weight: 700;
-        line-height: 1.4;
+        line-height: 1.2;
         text-align: center;
     }
 
@@ -941,14 +944,14 @@ $escaped-svg-characters: (
     }
 
     .vpf-welcome-content {
-        max-width: 700px;
+        max-width: 900px;
         margin: 0 auto;
 
         // Title.
         .vpf-welcome-content-title {
             max-width: 600px;
             margin: 0 auto;
-            margin-bottom: 50px;
+            margin-bottom: 80px;
         }
 
         // Features.
@@ -964,16 +967,21 @@ $escaped-svg-characters: (
 
             li {
                 position: relative;
-                padding-left: 30px;
+                padding-left: 50px;
 
                 > span {
                     position: absolute;
                     display: block;
                     top: 0;
                     left: 0;
+                    font-size: 1.6em;
+                    line-height: 1.3;
                 }
                 > strong {
-                    color: #000;
+                    font-size: 1.6em;
+                    font-weight: 400;
+                    line-height: 1.3;
+                    color: #1d2327;
                 }
             }
         }
