changed deprecated Toolbar usage method
fixed align control styles

--- a/src/gutenberg/components/align-control/style.scss
+++ b/src/gutenberg/components/align-control/style.scss
@@ -1,14 +1,21 @@
 .vpf-component-align-control {
-  .components-toolbar > :nth-child(4) {
-    margin-right: auto;
-    margin-left: auto;
-  }
-
   .vpf-component-align-control-separator {
     width: auto;
     padding: 0;
     pointer-events: none;
     border: none;
-    border-right: 1px solid #e2e4e7;
+    border-right: 1px solid #1e1e1e;
+  }
+
+  // This hacky selector is used to override standard styles.
+  .components-toolbar-button.has-icon.has-icon {
+    min-width: 40px;
+    padding-right: 10px;
+    padding-left: 10px;
+
+    &::before {
+      right: 4px;
+      left: 4px;
+    }
   }
 }
