--- a/src/gutenberg/components/color-picker/style.scss
+++ b/src/gutenberg/components/color-picker/style.scss
@@ -1,34 +1,96 @@
-.vpf-control-wrap-color {
-  .vpf-control-wrap-color + .vpf-control-wrap-color {
-    margin-top: -5px;
-  }
+@use "sass:math";
 
+.vpf-control-wrap-color {
   > .components-base-control__field {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-top: 16px;
+    margin: 0;
 
     .components-color-palette__item-wrapper {
       margin: 0;
     }
 
     .components-base-control__label {
+      order: 2;
       margin-bottom: 0;
+      margin-left: 8px;
     }
   }
 
-  .components-circular-option-picker__option {
-    color: transparent;
+  .components-dropdown {
+    display: block;
+  }
+}
+
+.vpf-component-color-toggle {
+  position: relative;
+  display: block;
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  color: transparent;
+  cursor: pointer;
+  background:
+    linear-gradient(
+      -45deg,
+      transparent 48%,
+      #ddd 0,
+      #ddd 52%,
+      transparent 0
+    );
+  border: none;
+  border-radius: 50%;
+  transition: transform 0.1s ease;
+
+  &:hover,
+  &:focus {
+    transform: scale(1.2);
+  }
+
+  > span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    background-color: currentcolor;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 1px rgb(0 0 0 / 20%);
   }
 }
 
 .vpf-component-color-picker {
   .vpf-component-color-picker-palette {
-    margin: 0 17px;
+    margin: 0 16px;
+  }
+
+  .components-color-picker {
+    margin: 0 auto;
   }
 
   .components-color-palette {
     margin: 0;
+  }
+}
+
+.vpf-component-color-picker__dropdown {
+  display: block;
+  width: 100%;
+}
+
+.vpf-component-color-picker__dropdown-content {
+  @media screen and (min-width: 782px) {
+    .components-popover__content {
+      margin-right: #{ $grid-unit-40 } !important;
+    }
+
+    &.is-from-top .components-popover__content {
+      margin-top: #{ -($grid-unit-60 + $grid-unit-15) } !important;
+    }
+
+    &.is-from-bottom .components-popover__content {
+      margin-bottom: #{ -($grid-unit-60 + $grid-unit-15) } !important;
+    }
   }
 }
