--- a/src/gutenberg/components/align-control/style.scss
+++ b/src/gutenberg/components/align-control/style.scss
@@ -1,10 +1,14 @@
 .vpf-component-align-control {
+  .components-accessible-toolbar {
+    border-color: #d7dade;
+  }
+
   .vpf-component-align-control-separator {
     width: auto;
     padding: 0;
     pointer-events: none;
     border: none;
-    border-right: 1px solid #1e1e1e;
+    border-right: 1px solid #d7dade;
   }
 
   // This hacky selector is used to override standard styles.
