--- a/src/gutenberg/block/style.scss
+++ b/src/gutenberg/block/style.scss
@@ -1,25 +1,46 @@
 /**
  * Editor Styles
  */
-.components-placeholder.vpf-setup-wizard {
-  > .components-placeholder__fieldset {
-    flex-direction: column;
+.vpf-setup-wizard {
+  padding: 30px;
+  padding-bottom: 35px;
+  color: #000;
+  text-align: center;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 6px;
 
-    > div {
-      margin-bottom: 20px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    .vpf-component-icon-selector {
-      max-width: 230px;
-    }
+  > div {
+    max-width: 450px;
+    margin: 0 auto;
   }
 
-  .components-placeholder {
-    margin-bottom: 0;
+  .vpf-setup-wizard-title {
+    font-size: 22px;
+    font-weight: 400;
+  }
+
+  .vpf-setup-wizard-description {
+    font-size: 16px;
+    opacity: 0.6;
+  }
+
+  .vpf-setup-wizard-panel {
+    margin-top: 25px;
+  }
+
+  .vpf-component-icon-selector .vpf-component-icon-selector-item {
+    padding: 18px;
+
+    svg {
+      width: 23px;
+      max-width: 23px;
+      height: 23px;
+    }
+
+    span {
+      font-size: 0.8em;
+    }
   }
 
   .spinner,
