added styles for Sortable control

--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -17,6 +17,7 @@
 @import "./components/icons-selector/style";
 @import "./components/iframe-preview/style";
 @import "./components/select-control/style";
+@import "./components/sortable-control/style";
 @import "./components/pro-note/style";
 @import "./components/spinner/style";
 @import "./components/tiles-selector/style";
