--- a/src/gutenberg/components/sortable-control/style.scss
+++ b/src/gutenberg/components/sortable-control/style.scss
@@ -1,9 +1,17 @@
-.vpf-component-sortable {
+.vpf-component-sortable,
+.vpf-component-sortable-disabled {
   padding: 4px 0;
   margin: 0;
   list-style: none;
   border: 1px solid #7e8993;
   border-radius: 4px;
+}
+
+.vpf-dragging-has-disabled-options {
+  padding-bottom: 0;
+  border-bottom: none;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .vpf-component-sortable > li,
@@ -34,4 +42,50 @@
       height: 20px;
     }
   }
+}
+
+.vpf-component-sortable + ul.vpf-component-sortable-disabled {
+  padding: 0 0 4px;
+  margin: 0;
+  list-style: none;
+  border: 1px solid #7e8993;
+  border-top: none;
+  border-radius: 0 0 4px 4px;
+
+  > li {
+    height: 34px;
+    padding: 3px 8px;
+    margin: 0;
+    color: #0000007a;
+    list-style: none;
+
+    &:hover {
+      background-color: #f7f7f7;
+    }
+  }
+}
+
+.vpf-component-sortable-delete,
+.vpf-component-sortable-add {
+  display: inline-flex;
+  height: 28px;
+  vertical-align: middle;
+  cursor: pointer;
+  border-radius: 3px;
+
+  &:hover {
+    background-color: #e1e1e1;
+  }
+}
+
+.vpf-component-sortable-delete {
+  float: right;
+  padding: 4px 8px;
+  margin: 0px;
+}
+
+.vpf-component-sortable-add {
+  padding: 4px;
+  margin-right: 8px;
+  color: #000;
 }
