--- a/src/gutenberg/components/sortable-control/style.scss
+++ b/src/gutenberg/components/sortable-control/style.scss
@@ -16,6 +16,8 @@
 
 .vpf-component-sortable > li,
 .vpf-component-sortable-item-dragging {
+  display: flex;
+  align-items: center;
   padding: 3px 8px;
   margin: 0;
   list-style: none;
@@ -42,17 +44,24 @@
       height: 20px;
     }
   }
+
+  &:hover .vpf-component-sortable-delete {
+    opacity: 1;
+  }
 }
 
 .vpf-component-sortable + ul.vpf-component-sortable-disabled {
   padding: 0 0 4px;
   margin: 0;
   list-style: none;
+  background-color: #f6f6f6;
   border: 1px solid #7e8993;
-  border-top: none;
+  border-top-color: #dcdcdc;
   border-radius: 0 0 4px 4px;
 
   > li {
+    display: flex;
+    align-items: center;
     height: 34px;
     padding: 3px 8px;
     margin: 0;
@@ -76,16 +85,26 @@
   &:hover {
     background-color: #e1e1e1;
   }
+
+  svg {
+    width: 11px;
+    height: auto;
+  }
 }
 
 .vpf-component-sortable-delete {
-  float: right;
-  padding: 4px 8px;
+  padding: 0 5px;
   margin: 0px;
+  margin-left: auto;
+  opacity: 0;
+
+  svg {
+    width: 9px;
+  }
 }
 
 .vpf-component-sortable-add {
-  padding: 4px;
-  margin-right: 8px;
+  padding: 0 4px;
+  margin-right: 7px;
   color: #000;
 }
