--- a/src/assets/css/theme-twentytwentytwo.scss
+++ b/src/assets/css/theme-twentytwentytwo.scss
@@ -1,3 +1,8 @@
+// Fix headings margin.
+.vp-portfolio__item-meta-title {
+  margin-top: 0;
+}
+
 // Fix top and bottom padding of main content in the popup iframe.
 .vp-popup-iframe .wp-site-blocks > main {
   padding-top: 80px;
