--- a/src/gutenberg/components/elements-selector/style.scss
+++ b/src/gutenberg/components/elements-selector/style.scss
@@ -21,7 +21,9 @@
     button {
       display: flex;
       width: 25px;
+      height: auto;
       padding: 4px 5px;
+      margin-top: 0;
       font-size: 10px;
       color: #000;
       cursor: pointer;
@@ -39,6 +41,7 @@
       svg {
         width: 100%;
         height: auto;
+        margin-left: 0;
         fill: currentcolor;
       }
     }
@@ -52,61 +55,62 @@
     > * {
       width: 100%;
     }
+  }
+}
 
-    .vpf-component-elements-selector-control-location-options-add-button {
-      display: flex;
-      align-items: center;
-      width: 100%;
-      margin-top: 10px;
+// Buttons.
+.vpf-component-elements-selector-control-location-options-add-button {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
 
-      .components-button {
-        justify-content: center;
-        width: 100%;
-        height: 40px;
-        background: #fff;
-        border: 1px solid #e1e1e1;
-        border-radius: 4px;
-        box-shadow: none;
+  .components-button {
+    justify-content: center;
+    width: 100%;
+    height: 40px;
+    background: #fff;
+    border: 1px solid #e1e1e1;
+    border-radius: 4px;
+    box-shadow: none;
 
-        &:hover,
-        &:focus {
-          background: #f9f8f8;
-          border-color: #cbcbcb;
-        }
-      }
+    &:hover,
+    &:focus {
+      background: #f9f8f8;
+      border-color: #cbcbcb;
     }
+  }
+}
 
-    .vpf-component-elements-selector-control-location-options-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-      height: 40px;
-      padding: 9px 12px;
-      margin-top: 10px;
-      font-weight: 500;
-      color: #000;
-      background-color: #f9f8f8;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 10%);
+.vpf-component-elements-selector-control-location-options-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 40px;
+  padding: 9px 12px;
+  margin-top: 10px;
+  font-weight: 500;
+  color: #000;
+  background-color: #f9f8f8;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 10%);
 
-      &:hover,
-      &:focus {
-        color: var(--wp-admin-theme-color);
-        border-color: $gray-600;
-      }
-    }
+  &:hover,
+  &:focus {
+    color: var(--wp-admin-theme-color);
+    border-color: $gray-600;
+  }
+}
 
-    button.vpf-component-elements-selector-control-location-options-item {
-      cursor: pointer;
+button.vpf-component-elements-selector-control-location-options-item {
+  cursor: pointer;
 
-      svg {
-        width: 13px;
-        height: auto;
-        margin-left: 5px;
-      }
-    }
+  svg {
+    width: 13px;
+    height: auto;
+    margin-left: 5px;
   }
 }
 
