changed modal component size styles

--- a/src/gutenberg/components/toggle-modal/style.scss
+++ b/src/gutenberg/components/toggle-modal/style.scss
@@ -1,14 +1,21 @@
 .vpf-component-modal {
+  &.vpf-component-modal-size-sm {
+    width: 100%;
+    max-width: 360px;
+  }
+
   @media (min-width: 600px) {
     &.vpf-component-modal-size-md {
-      min-width: 600px;
+      width: 100%;
+      max-width: 600px;
     }
   }
 
   // size
   @media (min-width: 840px) {
     &.vpf-component-modal-size-lg {
-      min-width: 800px;
+      width: 100%;
+      max-width: 800px;
     }
   }
 }
