--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -375,32 +375,55 @@ $grid_sm: 600px !default;
 }
 
 /**
- * Portfolio List page
+ * Admin Notices
  */
-.notice.vpf-saved-layouts-notice {
-  padding: 11px 15px;
-  margin-top: 15px;
-  font-size: 14px;
-  line-height: 1.4;
+.vpf-admin-notice {
+  display: flex;
+  padding: 0;
+  border: none;
+  border-left: 4px solid #2540cc;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 15%);
 
-  h2 {
-    margin-top: 5px;
+  h3 {
+    margin-top: 10px;
     margin-bottom: 12px;
+    font-size: 16px;
+
+    svg {
+      display: inline-block;
+      width: 1.3em;
+      height: 1.3em;
+      margin-right: 0.2em;
+      vertical-align: -0.28em;
+    }
   }
 
-  p {
-    font-size: 15px;
+  .vpf-admin-notice-icon {
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    min-width: 50px;
+    padding-top: 14px;
+    background-color: #f2f8ff;
   }
 
-  svg {
-    display: inline-block;
-    width: 1.3em;
-    height: 1.3em;
-    margin-right: 0.2em;
-    vertical-align: -0.28em;
+  .dashicons-visual-portfolio {
+    display: block;
+    width: 22px;
+    height: 22px;
+    filter: invert(1);
+    background-size: 22px;
+    opacity: 1;
+  }
+
+  .vpf-admin-notice-content {
+    padding: 6px 16px;
   }
 }
 
+/**
+ * Portfolio List page
+ */
 .vp-portfolio-list__icon {
   position: relative;
   display: block;
