--- a/src/gutenberg/components/elements-selector/style.scss
+++ b/src/gutenberg/components/elements-selector/style.scss
@@ -144,10 +144,11 @@ button.vpf-component-elements-selector-control-location-options-item {
 
 .vpf-component-elements-selector-control-location-options-title-pro {
   padding: 0.2em 0.8em;
-  margin-left: auto;
-  font-size: 0.8em;
+  margin-left: 10px;
+  font-size: 0.7em;
+  font-weight: 600;
   color: #fff;
-  background-color: #2540cc;
+  background: linear-gradient(to left, #743ad5, #d53a9d);
   border-radius: 1em;
 }
 
