--- a/src/gutenberg/components/sortable-control/style.scss
+++ b/src/gutenberg/components/sortable-control/style.scss
@@ -2,6 +2,7 @@
 .vpf-component-sortable-disabled {
   padding: 4px 0;
   margin: 0;
+  overflow: hidden;
   list-style: none;
   border: 1px solid #7e8993;
   border-radius: 4px;
@@ -14,8 +15,8 @@
   border-bottom-left-radius: 0;
 }
 
-.vpf-component-sortable > li,
-.vpf-component-sortable-item-dragging {
+.vpf-component-sortable > li {
+  position: relative;
   display: flex;
   align-items: center;
   padding: 3px 8px;
@@ -47,6 +48,15 @@
 
   &:hover .vpf-component-sortable-delete {
     opacity: 1;
+  }
+
+  &.vpf-component-sortable-item-dragging {
+    z-index: 1;
+    background-color: #f7f7f7;
+
+    .vpf-component-sortable-delete {
+      opacity: 0;
+    }
   }
 }
 
