fixed controls description rendering to manual output instead of help attribute to prevent error rendering block tags inside <p>

--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -1,5 +1,10 @@
 .vpf-control-wrap {
-  .components-base-control__help {
+  > .components-base-control__help,
+  > .components-base-control__field > .components-base-control__help {
+    margin-bottom: 1em;
+    font-size: 12px;
+    font-style: normal;
+    color: rgb(117, 117, 117);
     word-break: break-word;
   }
 
