--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -18,6 +18,13 @@
   }
 }
 
+// Text control.
+.vpf-control-wrap-text input[disabled] {
+  color: rgba(44, 51, 56, 50%);
+  border-color: rgba(220, 220, 222, 75%);
+  box-shadow: inset 0 1px 2px rgb(0 0 0 / 4%);
+}
+
 // Notice control.
 .vpf-control-wrap-notice .components-notice {
   margin: 0;
