removed unused CSS selectors for Go Pro links

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -51,11 +51,8 @@ $escaped-svg-characters: (
 /*
  * Go Pro menu link
  */
-#adminmenu a[href*="page=visual_portfolio_go_pro"],
-.wp-list-table.plugins a[href*="page=visual_portfolio_go_pro"],
-.vpf-admin-toolbar a[href*="page=visual_portfolio_go_pro"],
 #adminmenu a[href*="utm_campaign=go_pro"],
-.wp-list-table.plugins a[href*="visualportfolio.co"],
+.wp-list-table.plugins a[href*="utm_campaign=go_pro"],
 .vpf-admin-toolbar a[href*="utm_campaign=go_pro"] {
   font-weight: 700;
   color: #11b916;
