added auto height to filter/select dropdown

--- a/src/templates/items-list/filter/dropdown/_variables.scss
+++ b/src/templates/items-list/filter/dropdown/_variables.scss
@@ -14,6 +14,7 @@
   --vp-filter-dropdown--items__text-decoration: none;
   --vp-filter-dropdown--items__text-transform: uppercase;
   --vp-filter-dropdown--items__letter-spacing: 0.015em;
+  --vp-filter-dropdown--items__height: auto;
   --vp-filter-dropdown--items__color: var(--vp-color-gray);
   --vp-filter-dropdown--items__background-color: var(--vp-color-gray-lighten);
   --vp-filter-dropdown--items__border-radius: var(--vp-border-radius);
