--- a/src/templates/items-list/sort/dropdown/_variables.scss
+++ b/src/templates/items-list/sort/dropdown/_variables.scss
@@ -15,6 +15,7 @@
   --vp-sort-dropdown--items__text-decoration: none;
   --vp-sort-dropdown--items__text-transform: uppercase;
   --vp-sort-dropdown--items__letter-spacing: 0.015em;
+  --vp-sort-dropdown--items__height: auto;
   --vp-sort-dropdown--items__color: var(--vp-color-gray);
   --vp-sort-dropdown--items__background-color: var(--vp-color-gray-lighten);
   --vp-sort-dropdown--items__border-radius: var(--vp-border-radius);
