--- a/src/templates/items-list/sort/dropdown/style.scss
+++ b/src/templates/items-list/sort/dropdown/style.scss
@@ -12,6 +12,7 @@
   select {
     display: block;
     min-width: var(--vp-sort-dropdown--items__min-width);
+    height: var(--vp-sort-dropdown--items__height);
     min-height: var(--vp-sort-dropdown--items__min-height);
     padding: var(--vp-sort-dropdown--items__padding-v) var(--vp-sort-dropdown--items__padding-h);
     padding-right: calc(var(--vp-sort-dropdown--items__padding-right) + var(--vp-sort-dropdown--items__arrow-size));
