--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -16,6 +16,7 @@
 @import "./components/gallery-control/style";
 @import "./components/icons-selector/style";
 @import "./components/iframe-preview/style";
+@import "./components/notice/style";
 @import "./components/select-control/style";
 @import "./components/sortable-control/style";
 @import "./components/spinner/style";
