change Pro notice text color

--- a/src/assets/admin/css/style.scss
+++ b/src/assets/admin/css/style.scss
@@ -807,6 +807,7 @@ $pro_note_border_size: 2px;
   max-width: 260px;
   padding: 20px;
   font-size: 13px;
+  color: #b65e96;
   background: linear-gradient(to left, #743ad5, #d53a9d);
   border-radius: $pro_note_radius;
 
