--- a/src/gutenberg/components/controls-render/style.scss
+++ b/src/gutenberg/components/controls-render/style.scss
@@ -76,7 +76,8 @@
     margin-left: -16px;
   }
 
-  .vpf-component-modal & {
+  .vpf-component-modal &,
+  .vpf-component-elements-selector-modal & {
     margin-right: -32px;
     margin-left: -32px;
   }
