--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -18,6 +18,7 @@
 @import "./components/iframe-preview/style";
 @import "./components/notice/style";
 @import "./components/select-control/style";
+@import "./components/setup-wizard/style";
 @import "./components/sortable-control/style";
 @import "./components/spinner/style";
 @import "./components/tiles-selector/style";
