removed white background from Fancybox popup for better support vertical videos

--- a/src/assets/css/popup-fancybox.scss
+++ b/src/assets/css/popup-fancybox.scss
@@ -21,6 +21,11 @@
     }
   }
 
+  // removed white background to improve vertical videos displaying.
+  .fancybox-slide--iframe .fancybox-content {
+    background: none;
+  }
+
   // Caption.
   .fancybox-caption__body {
     font-size: 12px;
