fixed Fly overlay z-index when added Hover Image from Pro plugin

--- a/src/templates/items-list/items-style/emerge/style.scss
+++ b/src/templates/items-list/items-style/emerge/style.scss
@@ -48,7 +48,9 @@
     left: 0;
 
     // Fix FireFox image blinking
-    // https://github.com/nk-crew/visual-portfolio/issues/92
+    // @link https://github.com/nk-crew/visual-portfolio/issues/92
+    // -
+    // Also fix conflict with Hover Image in the Pro plugin.
     z-index: 2;
     display: flex;
     width: 100%;
