--- a/src/gutenberg/components/icons-selector/style.scss
+++ b/src/gutenberg/components/icons-selector/style.scss
@@ -1,34 +1,46 @@
 %vpf-icons-selector-item {
+  position: relative;
   height: auto;
-  padding: 10px;
+  padding: 15px;
   margin: 0;
-  color: #636569;
-  background: #f7f7f7 !important;
-  border: 1px solid #f7f7f7;
-  border-radius: 5px;
-  outline: none;
+  color: #000;
+  border-radius: 2px;
+
+  &::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    content: "";
+    background: var(--wp-admin-theme-color);
+    border-radius: 2px;
+    opacity: 0;
+  }
 
   &:hover,
   &:focus {
-    background: #fff !important;
-    border-color: #a1a7af !important;
-    box-shadow: 0 0 0 1px #a1a7af !important;
+    color: var(--wp-admin-theme-color);
+
+    &::after {
+      opacity: 0.04;
+    }
   }
 }
 %vpf-icons-selector-item-active {
-  background: #fff !important;
-  border-color: $gray-900 !important;
-  box-shadow: 0 0 0 1px $gray-900 !important;
+  color: var(--wp-admin-theme-color);
+  outline: 1px solid var(--wp-admin-theme-color);
 
-  svg {
-    opacity: 1;
+  &::after {
+    opacity: 0.04;
   }
 }
 
 .vpf-component-icon-selector {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 15px;
+  grid-gap: 5px;
   width: 100%;
 
   .vpf-component-icon-selector-item {
@@ -43,9 +55,9 @@
 
     svg {
       width: 100%;
-      max-width: 20px;
+      max-width: 18px;
       height: auto;
-      color: #000;
+      color: inherit;
       fill: none;
     }
 
@@ -54,17 +66,98 @@
     }
 
     span {
-      margin-top: auto;
       margin-right: -8px;
       margin-left: -8px;
-      font-size: 0.73em;
-      font-weight: 600;
-      text-transform: uppercase;
+      font-size: 12px;
       word-break: break-word;
     }
 
     div + span {
       padding-top: 8px;
     }
+  }
+}
+
+.vpf-control-wrap-icons_selector {
+  position: relative;
+
+  &:has(.vpf-component-icon-selector-allow-collapsing) {
+    &::after {
+      position: absolute;
+      top: -5px;
+      right: -16px;
+      bottom: -6px;
+      left: -16px;
+      z-index: -1;
+      display: block;
+      content: "";
+      background: #f8f8f8;
+      border-bottom: 1px solid #eee;
+      opacity: 0;
+      transition: opacity 0.1s ease-in-out;
+    }
+
+    .components-panel__body-title + &::after {
+      top: -52px;
+    }
+
+    .components-panel__body-title:hover + &::after,
+    &:hover::after {
+      opacity: 1;
+    }
+
+    .components-panel__body-title:hover + & .vpf-component-icon-selector-collapse-button button,
+    &:hover .vpf-component-icon-selector-collapse-button button {
+      opacity: 0.5;
+    }
+  }
+
+  + .vpf-control-wrap-category_tabs {
+    margin-top: -20px;
+  }
+}
+
+.vpf-component-icon-selector-collapse-button {
+  padding-top: 10px;
+  text-align: center;
+
+  button {
+    width: 100%;
+    font: inherit;
+    font-size: 12px;
+    color: inherit;
+    text-align: center;
+    cursor: pointer;
+    background: none;
+    border: none;
+    opacity: 0.3;
+    transition: opacity 0.1s ease-in-out, color 0.1s ease-in-out;
+
+    &:hover {
+      color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
+      opacity: 1 !important;
+    }
+
+    svg {
+      margin-left: 6px;
+    }
+  }
+
+  &:not(.vpf-component-icon-selector-collapse-button-expanded) button::after {
+    position: absolute;
+    top: -5px;
+    right: -16px;
+    bottom: -6px;
+    left: -16px;
+    z-index: 1;
+    content: "";
+  }
+}
+
+.vpf-component-icon-selector-collapse-button-expanded {
+  opacity: 1;
+
+  button svg {
+    transform: rotate(180deg);
   }
 }
