--- a/src/gutenberg/components/color-picker/style.scss
+++ b/src/gutenberg/components/color-picker/style.scss
@@ -1,62 +1,69 @@
 @use "sass:math";
 
-.vpf-control-wrap-color {
-  > .components-base-control__field {
-    display: flex;
-    align-items: center;
-    margin: 0;
+// Group label.
+.vpf-control-wrap-html:has(+ .vpf-control-wrap-color) {
+  margin-bottom: -8px;
+}
 
-    .components-color-palette__item-wrapper {
-      margin: 0;
-    }
+.vpf-control-wrap-color:has(+ .vpf-control-wrap-color) {
+  margin-bottom: -9px;
 
-    .components-base-control__label {
-      order: 2;
-      margin-bottom: 0;
-      margin-left: 8px;
-    }
-  }
-
-  .components-dropdown {
-    display: block;
+  .vpf-component-color-toggle {
+    border-bottom: none;
   }
 }
 
 .vpf-component-color-toggle {
   position: relative;
-  display: block;
-  width: 25px;
-  height: 25px;
-  padding: 0;
-  color: transparent;
-  cursor: pointer;
-  background:
-    linear-gradient(
-      -45deg,
-      transparent 48%,
-      #ddd 0,
-      #ddd 52%,
-      transparent 0
-    );
-  border: none;
-  border-radius: 50%;
-  transition: transform 0.1s ease;
+  width: 100%;
+  height: auto;
+  padding: 10px 12px;
+  margin-bottom: 0;
+  border: 1px solid rgba(0, 0, 0, 10%);
+  border-radius: 0;
 
-  &:hover,
-  &:focus {
-    transform: scale(1.2);
+  &.vpf-component-color-toggle-active {
+    color: var(--wp-admin-theme-color);
+    background-color: #f0f0f0;
   }
 
-  > span {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+  .vpf-component-color-toggle-indicator {
+    position: relative;
     display: block;
-    background-color: currentcolor;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    margin-right: 8px;
+    color: transparent;
+    cursor: pointer;
+    background:
+      linear-gradient(
+        -45deg,
+        transparent 48%,
+        #ddd 0,
+        #ddd 52%,
+        transparent 0
+      );
+    border: none;
     border-radius: 50%;
-    box-shadow: inset 0 0 0 1px rgb(0 0 0 / 20%);
+
+    > span {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: block;
+      background-color: currentcolor;
+      border-radius: 50%;
+      box-shadow: inset 0 0 0 1px rgb(0 0 0 / 20%);
+    }
+  }
+
+  .vpf-component-color-toggle-label {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
@@ -77,20 +84,4 @@
 .vpf-component-color-picker__dropdown {
   display: block;
   width: 100%;
-}
-
-.vpf-component-color-picker__dropdown-content {
-  @media screen and (min-width: 782px) {
-    .components-popover__content {
-      margin-right: #{ $grid-unit-40 } !important;
-    }
-
-    &.is-from-top .components-popover__content {
-      margin-top: #{ -($grid-unit-60 + $grid-unit-15) } !important;
-    }
-
-    &.is-from-bottom .components-popover__content {
-      margin-bottom: #{ -($grid-unit-60 + $grid-unit-15) } !important;
-    }
-  }
 }
