added more Skin controls to `builtin_controls`
- added Tabs control
- categorized Skin controls to tabs
- added php filter `vpf_items_style_builtin_controls`
- changed Classic Skin meta color CSS variables

--- a/src/gutenberg/style.scss
+++ b/src/gutenberg/style.scss
@@ -21,5 +21,6 @@
 @import "./components/setup-wizard/style";
 @import "./components/sortable-control/style";
 @import "./components/spinner/style";
+@import "./components/tabs-control/style";
 @import "./components/tiles-selector/style";
 @import "./components/toggle-modal/style";
