improved Icons Selector control

--- a/src/gutenberg/components/setup-wizard/style.scss
+++ b/src/gutenberg/components/setup-wizard/style.scss
@@ -187,7 +187,7 @@ $brand_color: #2540cc !default;
       border: none !important;
       border-radius: 6px;
 
-      &::after {
+      &::before {
         display: block;
         width: 100%;
         padding-top: 100%;
