--- a/src/gutenberg/components/icons-selector/style.scss
+++ b/src/gutenberg/components/icons-selector/style.scss
@@ -5,6 +5,7 @@
   margin: 0;
   color: #000;
   border-radius: 2px;
+  transition: 0.1s color ease-in-out;
 
   &::after {
     position: absolute;
@@ -17,6 +18,7 @@
     background: var(--wp-admin-theme-color);
     border-radius: 2px;
     opacity: 0;
+    transition: 0.1s opacity ease-in-out;
   }
 
   &:hover,
@@ -35,6 +37,10 @@
   &::after {
     opacity: 0.04;
   }
+}
+
+.vpf-control-wrap-icons_selector:has(+ .vpf-control-wrap-category_tabs) {
+  margin-bottom: 0;
 }
 
 .vpf-component-icon-selector {
@@ -76,88 +82,52 @@
       padding-top: 8px;
     }
   }
-}
 
-.vpf-control-wrap-icons_selector {
-  position: relative;
-
-  &:has(.vpf-component-icon-selector-allow-collapsing) {
-    &::after {
-      position: absolute;
-      top: -5px;
-      right: -16px;
-      bottom: -6px;
-      left: -16px;
-      z-index: -1;
-      display: block;
-      content: "";
-      background: #f8f8f8;
-      border-bottom: 1px solid #eee;
-      opacity: 0;
-      transition: opacity 0.1s ease-in-out;
-    }
-
-    .components-panel__body-title + &::after {
-      top: -52px;
-    }
-
-    .components-panel__body-title:hover + &::after,
-    &:hover::after {
-      opacity: 1;
-    }
-
-    .components-panel__body-title:hover + & .vpf-component-icon-selector-collapse-button button,
-    &:hover .vpf-component-icon-selector-collapse-button button {
-      opacity: 0.5;
-    }
-  }
-
-  + .vpf-control-wrap-category_tabs {
-    margin-top: -20px;
-  }
-}
-
-.vpf-component-icon-selector-collapse-button {
-  padding-top: 10px;
-  text-align: center;
-
-  button {
-    width: 100%;
-    font: inherit;
-    font-size: 12px;
-    color: inherit;
-    text-align: center;
-    cursor: pointer;
-    background: none;
-    border: none;
-    opacity: 0.3;
-    transition: opacity 0.1s ease-in-out, color 0.1s ease-in-out;
-
-    &:hover {
-      color: var(--wp-components-color-accent, var(--wp-admin-theme-color, #007cba));
-      opacity: 1 !important;
-    }
-
+  .vpf-component-icon-selector-item-collapse {
     svg {
-      margin-left: 6px;
+      width: 14px;
+      height: 14px;
+      color: var(--wp-admin-theme-color);
     }
-  }
 
-  &:not(.vpf-component-icon-selector-collapse-button-expanded) button::after {
-    position: absolute;
-    top: -5px;
-    right: -16px;
-    bottom: -6px;
-    left: -16px;
-    z-index: 1;
-    content: "";
-  }
-}
+    .vpf-component-icon-selector-item-collapse {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 23px;
+      height: 23px;
 
-.vpf-component-icon-selector-collapse-button-expanded {
-  opacity: 1;
+      &::after {
+        position: absolute;
+        top: -3px;
+        right: -3px;
+        bottom: -3px;
+        left: -3px;
+        display: block;
+        content: "";
+        background-color: var(--wp-admin-theme-color);
+        border-radius: 15px;
+        opacity: 0.05;
+        transition: 0.1s opacity ease-in-out;
+      }
+    }
 
-  button svg {
-    transform: rotate(180deg);
+    &:hover,
+    &:focus {
+      &::after {
+        opacity: 0;
+      }
+
+      .vpf-component-icon-selector-item-collapse::after {
+        opacity: 0.1;
+      }
+    }
+
+    &.vpf-component-icon-selector-item-expanded {
+      svg {
+        transform: rotate(180deg);
+      }
+    }
   }
 }
